# fastapi

./: .gitignore  .ryvn-build-trigger  Dockerfile  README.md  nixpacks.toml  pyproject.toml  setup.py
.github/workflows/: ryvn-backend-fastapi-release.yaml
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/endpoints/: generate.py  items.py
app/core/: config.py  logging.py  telemetry.py
app/crud/: item.py
app/db/: session.py
app/models/: item.py
app/schemas/: item.py
